--- a/src/main/resources/static/cashier.html
+++ b/src/main/resources/static/cashier.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="css/theme-lightwide.css" />
     <link rel="stylesheet" href="css/ui-enhanced.css" />
     <link rel="stylesheet" href="css/ui-modern.css" />
+    <!-- avoid CDN blocked by Tracking Prevention -->
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
       /* 统一主内容区滚动样式 */
