--- a/src/main/resources/static/order-history.html
+++ b/src/main/resources/static/order-history.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/theme-lightwide.css" />
     <link rel="stylesheet" href="css/ui-enhanced.css" />
     <link rel="stylesheet" href="css/ui-modern.css" />
+    <!-- avoid CDN blocked by Tracking Prevention -->
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="css/layout.css" />
     <style>
@@ -78,7 +80,7 @@
           if (empty) { empty.classList.add('hidden'); empty.style.display = 'none'; }
           tbody.classList.remove('hidden'); tbody.style.display = 'table-row-group';
           if (countEl) countEl.textContent = `共 ${list.length} 条订单`;
-          tbody.innerHTML = list.map(o => {
+          tbody.innerHTML = list.map((o, index) => {
             const orderId = o.orderId || o.id || '-';
             const time = o.orderTime ? new Date(o.orderTime).toLocaleString('zh-CN') : '-';
             const member = o.memberId || ''; const customer = o.customerName || '非会员';
@@ -86,6 +88,7 @@
             const payStatus = (function(s){ const m={0:'待支付',1:'已支付',2:'已退款'}; return m[s]||'未知'; })(o.paymentStatus);
             const total = (o.actualPayment!=null?o.actualPayment:(o.totalAmount||0));
             return `<tr>
+              <td class='px-6 py-3 font-mono text-xs text-gray-500'>${index + 1}</td>
               <td class='px-6 py-3'>
                 <div class='font-mono text-xs'>${orderId}</div>
                 <div class='text-xs text-gray-500'>${time}</div>
@@ -131,7 +134,7 @@
             window.allOrders = list;
             window.filteredOrders = list.slice();
             // 渲染
-            const rows = list.map(o=>{
+            const rows = list.map((o, index)=>{
               const orderId = o.orderId || '-';
               const time = o.orderTime ? new Date(o.orderTime).toLocaleString('zh-CN') : '-';
               const customer = o.customerName || '非会员';
@@ -140,6 +143,7 @@
               const payStatus = {0:'待支付',1:'已支付',2:'已退款'}[o.paymentStatus] || '未知';
               const total = (o.actualPayment!=null?o.actualPayment:(o.totalAmount||0));
               return `<tr>
+                <td class='px-6 py-3 font-mono text-xs text-gray-500'>${index + 1}</td>
                 <td class='px-6 py-3'><div class='font-mono text-xs'>${orderId}</div><div class='text-xs text-gray-500'>${time}</div></td>
                 <td class='px-6 py-3'><div class='text-xs'>${customer}</div>${member? `<div class='text-xs text-gray-500'>会员ID: ${member}</div>`:''}</td>
                 <td class='px-6 py-3'><div class='text-xs'>${payType}</div><div class='text-xs'>${payStatus}</div></td>
@@ -201,26 +205,26 @@
         </div>
 
         <!-- 订单筛选与列表 -->
-        <div class="grid grid-cols-1 lg:grid-cols-3 gap-6" id="order-history-content">
-          <!-- 新增横向过滤条 -->
-          <div class="card-modern p-4 lg:col-span-1" id="order-filter-bar">
-            <div class="grid grid-cols-1 md:grid-cols-12 gap-4 items-end">
-              <div class="md:col-span-3">
-                <label class="block text-xs font-medium text-gray-700 mb-1" for="order-date-filter">订单日期</label>
-                <input type="date" class="input-modern text-sm w-full" id="order-date-filter">
+        <div class="flex flex-col gap-6" id="order-history-content">
+          <!-- 调整为顶部横向过滤条 -->
+          <div class="card-modern p-5 w-full shadow-sm" id="order-filter-bar">
+            <div class="flex flex-wrap gap-4 items-end">
+              <div class="w-full sm:w-auto flex-1 min-w-[160px]">
+                <label class="block text-xs font-bold text-gray-500 uppercase tracking-wider mb-1" for="order-date-filter">订单日期</label>
+                <input type="date" class="input-modern text-sm h-10 w-full" id="order-date-filter">
               </div>
-              <div class="md:col-span-2">
-                <label class="block text-xs font-medium text-gray-700 mb-1" for="order-status-filter">订单状态</label>
-                <select class="input-modern text-sm w-full" id="order-status-filter">
+              <div class="w-full sm:w-32">
+                <label class="block text-xs font-bold text-gray-500 uppercase tracking-wider mb-1" for="order-status-filter">订单状态</label>
+                <select class="input-modern text-sm h-10 w-full" id="order-status-filter">
                   <option value="">全部状态</option>
                   <option value="1">已支付</option>
                   <option value="2">已退款</option>
                   <option value="0">待支付</option>
                 </select>
               </div>
-              <div class="md:col-span-2">
-                <label class="block text-xs font-medium text-gray-700 mb-1" for="payment-type-filter">支付方式</label>
-                <select class="input-modern text-sm w-full" id="payment-type-filter">
+              <div class="w-full sm:w-32">
+                <label class="block text-xs font-bold text-gray-500 uppercase tracking-wider mb-1" for="payment-type-filter">支付方式</label>
+                <select class="input-modern text-sm h-10 w-full" id="payment-type-filter">
                   <option value="">全部方式</option>
                   <option value="1">现金</option>
                   <option value="2">微信</option>
@@ -229,18 +233,18 @@
                   <option value="5">银行卡</option>
                 </select>
               </div>
-              <div class="md:col-span-3">
-                <label class="block text-xs font-medium text-gray-700 mb-1" for="member-filter">会员信息</label>
-                <input type="text" class="input-modern text-sm w-full" placeholder="姓名或手机号" id="member-filter">
+              <div class="w-full sm:w-auto flex-[2] min-w-[200px]">
+                <label class="block text-xs font-bold text-gray-500 uppercase tracking-wider mb-1" for="member-filter">会员信息 / 订单号</label>
+                <input type="text" class="input-modern text-sm h-10 w-full" placeholder="输入姓名、手机号或订单号..." id="member-filter">
               </div>
-              <div class="md:col-span-2 flex gap-2 justify-end">
-                <button class="btn btn-outline text-xs" id="reset-filters-btn">重置</button>
-                <button class="btn btn-primary text-xs" id="apply-filters-btn">查询</button>
+              <div class="w-full sm:w-auto flex gap-2 justify-end pb-[1px]">
+                <button class="btn btn-outline h-10 px-4" id="reset-filters-btn"><i class="fa fa-refresh mr-1"></i> 重置</button>
+                <button class="btn btn-primary h-10 px-6 shadow-md hover:shadow-lg transition-shadow" id="apply-filters-btn"><i class="fa fa-search mr-1"></i> 查询</button>
               </div>
             </div>
           </div>
-          <!-- 订单列表卡片保留 -->
-          <div class="card-modern lg:col-span-2" id="orders-list-card">
+          <!-- 订单列表卡片 - 全宽 -->
+          <div class="card-modern w-full" id="orders-list-card">
               <div class="p-6 border-b border-gray-100 flex justify-between items-center">
                 <h3 class="font-bold">订单列表</h3>
                 <div class="text-sm text-gray-500" id="orders-count">共 0 条订单</div>
@@ -251,6 +255,7 @@
                 <table class="table-modern-compact w-full">
                   <thead class="bg-gray-50">
                     <tr>
+                      <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">序号</th>
                       <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">订单信息</th>
                       <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">会员信息</th>
                       <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">支付信息</th>
@@ -866,14 +871,18 @@
       let itemsHtml = '';
       const items = order.items || order.orderItems || [];
       if (Array.isArray(items) && items.length > 0) {
-        itemsHtml = `<table class="min-w-full text-sm border border-gray-200 rounded">\n<thead class="bg-gray-50">\n<tr>\n<th class="px-3 py-2 text-left">药品名称</th>\n<th class="px-3 py-2 text-left">规格</th>\n<th class="px-3 py-2 text-right">数量</th>\n<th class="px-3 py-2 text-right">单价</th>\n<th class="px-3 py-2 text-right">小计</th>\n</tr>\n</thead><tbody>` +
+        itemsHtml = `<table class="min-w-full text-sm border border-gray-200 rounded detail-table">\n<thead class="bg-gray-50">\n<tr>\n<th class="px-3 py-2 text-left">条码/货号</th>\n<th class="px-3 py-2 text-left">药品名称</th>\n<th class="px-3 py-2 text-left">规格/剂型</th>\n<th class="px-3 py-2 text-left">厂家</th>\n<th class="px-3 py-2 text-right">数量</th>\n<th class="px-3 py-2 text-right">单价</th>\n<th class="px-3 py-2 text-right">小计</th>\n</tr>\n</thead><tbody>` +
             items.map(it => {
-                const name = it.medicineName || it.tradeName || it.genericName || it.name || '未知药品';
+                const barcode = it.barcode || '-';
+                const pcode = it.productCode ? `<div class="text-xs text-gray-400">${it.productCode}</div>` : '';
+                const name = it.medicineName || it.tradeName || it.genericName || it.productName || '未知药品';
                 const spec = it.spec || it.specification || '-';
+                const form = it.dosageForm ? ` <span class="text-xs text-gray-400">(${it.dosageForm})</span>` : '';
+                const manuf = it.manufacturer || '-';
                 const qty = it.quantity || it.qty || 0;
                 const unitPrice = it.unitPrice || it.price || 0;
                 const subtotal = (qty * unitPrice).toFixed(2);
-                return `<tr class="border-t">\n<td class="px-3 py-2">${name}</td>\n<td class="px-3 py-2 text-gray-500">${spec}</td>\n<td class="px-3 py-2 text-right">${qty}</td>\n<td class="px-3 py-2 text-right">¥${unitPrice}</td>\n<td class="px-3 py-2 text-right font-medium">¥${subtotal}</td>\n</tr>`; }).join('') + '</tbody></table>';
+                return `<tr class="border-t hover:bg-gray-50">\n<td class="px-3 py-2 text-gray-500 font-mono text-xs"><div>${barcode}</div>${pcode}</td>\n<td class="px-3 py-2 font-medium text-gray-700">${name}</td>\n<td class="px-3 py-2 text-gray-500">${spec}${form}</td>\n<td class="px-3 py-2 text-gray-500 text-xs">${manuf}</td>\n<td class="px-3 py-2 text-right font-mono">${qty}</td>\n<td class="px-3 py-2 text-right font-mono">¥${unitPrice}</td>\n<td class="px-3 py-2 text-right font-medium text-blue-600">¥${subtotal}</td>\n</tr>`; }).join('') + '</tbody></table>';
       } else {
         itemsHtml = '<div class="text-sm text-gray-500">无商品明细或后端未返回 items 列表</div>';
       }
