--- a/src/main/resources/static/products.html
+++ b/src/main/resources/static/products.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/theme-premium.css" />
     <link rel="stylesheet" href="css/theme-lightwide.css" />
     <link rel="stylesheet" href="css/ui-enhanced.css" />
+    <!-- avoid CDN blocked by Tracking Prevention -->
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
       .medicine-indicator{display:inline-flex;align-items:center;padding:.25rem .5rem;border-radius:9999px;font-size:.625rem;font-weight:500;}
