--- a/src/main/resources/static/stock-in.html
+++ b/src/main/resources/static/stock-in.html
@@ -41,7 +41,7 @@
         <aside class="layout-sidebar space-y-4">
           <div class="card-modern p-4 smart-suggestion"><div class="flex items-center gap-2 mb-2"><i class="fa fa-lightbulb-o text-blue-500"></i><h3 class="font-medium text-sm">操作提示</h3></div><ul class="space-y-2 text-xs text-gray-600"><li>确保药品信息准确，尤其批准文号与有效期</li><li>注意批号是否正确</li><li>入库前仔细核对药品与实物是否一致</li></ul></div>
           <div class="card-modern p-4"><h3 class="font-bold text-sm mb-3">入库流程</h3><ol class="space-y-2 text-xs text-gray-600"><li>1. 创建入库单</li><li>2. 添加药品</li><li>3. 确认信息</li><li>4. 完成入库</li></ol></div>
-          <div class="card-modern p-6"><h3 class="font-bold mb-4 text-sm">入库单信息</h3><div class="space-y-3 text-xs"><label class="block" for="org-name">机构名称</label><input type="text" class="input-modern text-sm mb-2" id="org-name" value="" placeholder="请输入机构名称"><label class="block" for="stock-date">入库日期</label><input type="date" class="input-modern text-sm mb-2" id="stock-date"><label class="block" for="location-input">货位</label><input type="text" class="input-modern text-sm mb-2" id="location-input" placeholder="可输入或选择货位"><label class="block" for="remark-input">备注</label><input type="text" class="input-modern text-sm mb-2" id="remark-input" placeholder="请输入备注信息"><div class="flex justify-end gap-2 pt-2"><button class="btn btn-outline text-xs">重置</button><button class="btn btn-primary text-xs"><i class="fa fa-save"></i> 保存</button></div></div></div>
+          <!-- Stock In Info removed as requested -->
         </aside>
         <div class="layout-main space-y-6">
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 max-w-none" id="stockin-kpi-row">
